[package]
name = "futures-micro"
version = "0.5.0"
description = "Minimal, no_std compatible async prelude."
keywords = ["async", "futures", "no-std"]
categories = ["asynchronous", "concurrency", "no-std"]
authors = ["James Laver <james.laver@gmail.com>"]
homepage = "https://github.com/irrustible/futures-micro"
repository = "https://github.com/irrustible/futures-micro"
documentation = "https://docs.rs/futures-micro"
edition = "2018"
license = "Apache-2.0 WITH LLVM-exception"
readme = "README.md"

[dependencies]
pin-project-lite = "0.2.4"

[dev-dependencies]
futures-lite = "0.1"
